@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.22 2004/11/11 11:40:36 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.23 2004/11/11 16:03:47 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -85,6 +85,14 @@ Exim version 4.44
     matching the list had actually called for a host name (not very likely,
     since this list is usually IP addresses). A host name is now passed as
     "[x.x.x.x]".
+
+24. Changed the calls that set up the SIGCHLD handler in the daemon to use the
+    code that specifies a non-restarting handler (typically sigaction() in
+    modern systems) in an attempt to fix a rare and obscure crash bug.
+
+25. Narrowed the window for a race in the daemon that could cause it to ignore
+    SIGCHLD signals. This is not a major problem, because they are used only to
+    wake it up if nothing else does.
 
 
 Exim version 4.43
